--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zaw.uni_tool">
    <application
-        android:label="uni_tool"
+        android:label="ゆにつーる"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
