--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_launcher_icons: ^0.9.0
   flutter_riverpod: ^0.14.0+3
-  keyboard_actions: ^3.4.1
+  keyboard_actions: 3.4.0
   touch_ripple_effect: ^2.1.3
 
 dev_dependencies:
