--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   keyboard_actions: 3.4.0
   touch_ripple_effect: ^2.1.3
   convex_bottom_bar: ^3.0.0
+  flutter_switch: ^0.3.2
 
 dev_dependencies:
   flutter_test:
