--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   touch_ripple_effect: ^2.1.3
   convex_bottom_bar: ^3.0.0
   flutter_switch: ^0.3.2
+  settings_ui: ^1.0.0
 
 dev_dependencies:
   flutter_test:
