--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,10 @@ dependencies:
   flutter_launcher_icons: ^0.9.0
   flutter_riverpod: ^0.14.0+3
   keyboard_actions: 3.4.0
-  touch_ripple_effect: ^2.1.3
   convex_bottom_bar: ^3.0.0
   flutter_switch: ^0.3.2
-  settings_ui: ^1.0.0
+  package_info: ^2.0.2
+  url_launcher: ^6.0.9
 
 dev_dependencies:
   flutter_test:
