--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_launcher_icons: ^0.9.0
   flutter_riverpod: ^0.14.0+3
-  keyboard_actions: 3.4.0
+  keyboard_actions: ^3.4.4
   convex_bottom_bar: ^3.0.0
   flutter_switch: ^0.3.2
   package_info: ^2.0.2
@@ -25,7 +25,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.4
+  pedantic_mono: ^1.14.0
 
 flutter:
   uses-material-design: true
