--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,31 +1,31 @@
 name: uni_tool
-description: A new Flutter project.
+description: uni tool for UNI'S ON AIR
 
 publish_to: 'none'
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.17.6 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.2
-  flutter_launcher_icons: ^0.9.0
-  flutter_riverpod: ^0.14.0+3
-  keyboard_actions: ^3.4.4
+  cupertino_icons: ^1.0.5
+  flutter_launcher_icons: ^0.10.0
+  flutter_riverpod: ^1.0.1
+  keyboard_actions: ^4.0.1
   convex_bottom_bar: ^3.0.0
   flutter_switch: ^0.3.2
   package_info: ^2.0.2
-  url_launcher: ^6.0.9
-  flutter_native_splash: ^1.2.0
+  url_launcher: ^6.1.5
+  flutter_native_splash: ^2.2.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  pedantic_mono: ^1.14.0
+  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
